width of navbar and scrolling issue on mobile browsers fixed

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+  scroll-margin-top: 20px;
   width: 100%;
   margin: 0;
   padding: 0;
@@ -20,7 +21,6 @@ html {
 }
 
 #container {
-
   width: 100%;
   min-height: 100vh;
   height: 100%;
@@ -29,7 +29,6 @@ html {
   margin-left: auto;
   margin-right: auto;
   background-color: #6683d944;
-  
 }
 
 
@@ -304,7 +303,6 @@ html {
 
 #navbar {
   z-index: 10;
-  width: 100%;
   background-color: #6683d9;
   padding: 10px 10px;
   transition: 0.3s;
